--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
